# SNCservice

./: README.md  docker-compose.yml  pyproject.toml
services/auth/: .env  Dockerfile  pyproject.toml  requirements.txt
services/auth/app/: consumer.py  main.py  producer.py
services/auth/app/api/: auth.py  auth2.py
services/auth/app/core/: config.py  jwt.py
services/auth/app/schemas/: message.py  user_schemas.py
services/command/: .env  Dockerfile  pyproject.toml  requirements.txt
services/command/app/: consumer.py  handler.py  main.py
services/command/app/core/: config.py  database.py
services/command/app/domain/: notifications.py  subscription_types.py  subscriptions.py  tokens.py  users.py
services/command/app/migrations/: env.py
services/command/app/migrations/versions/: 0572820cef1e_added_new_tables.py  1521c14e086d_initial_migration.py  1f769ea8540a_new_tables.py
services/command/app/repositories/: base_repo.py  notifications_repo.py  subscription_types_repo.py  subscriptions_repo.py  tokens_repo.py  users_repo.py
services/command/app/schemas/: notifications_schemas.py  subscription_types_schemas.py  subscriptions_schemas.py  tokens_schemas.py  users_schemas.py
services/command/app/services/: notifications_service.py  subscription_types_service.py  subscriptions_service.py  tokens_service.py  users_service.py
